--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,5 +6,18 @@
 	= javascript_include_tag 'application', 'data-turbolinks-track' => true
 	= csrf_meta_tags
 %body
- 	
-	= yield
+	%nav.navbar.navbar-inverse
+		.container
+			.navbar-brand= link_to "Instagram", root_path
+			-if user_signed_in?
+				%ul.nav.navbar-nav.navbar-left
+					%li= link_to "Gram It!", new_pic_path
+					%li= link_to "Setting",edit_user_registration_path
+					%li= link_to "Log out",destroy_user_session_path,method: :delete
+
+			- else
+				%ul.nav.navbar-nav.navbar-left
+					%li= link_to "Join",new_user_registration_path
+					%li= link_to "Log in",new_user_session_path
+	.container
+		= yield
