--- a/app/views/pics/new.html.haml
+++ b/app/views/pics/new.html.haml
@@ -1,5 +1,8 @@
-%h1 Post pics
+.col-md8.col-md-offset-2
+	.row
+		.panel.panel-default
+			.panel-heading 
+				%h1 Post pics
+			.panel-body
+				= render 'form'
 
-= render 'form'
-
-= link_to "Back", root_path
