--- a/app/views/pics/_form.html.haml
+++ b/app/views/pics/_form.html.haml
@@ -1,9 +1,13 @@
 = simple_form_for @pic , html: {multipart: true } do |f|
 	
+
+	.form-group
+		=f.input :image,input_html: {class: 'form-control'}
 	.form-group
 		=f.input :title, input_html: {class: 'form-control'}
 	.form-group
 		=f.input :description, input_html: {class: 'form-control'}
+	
 
 	=f.button :submit, class: "btn btn-info"
 
