--- a/app/views/pics/show.html.haml
+++ b/app/views/pics/show.html.haml
@@ -13,6 +13,10 @@
 						= @pic.user.email
 				.col-md-6
 					.btn-group.pull-right
+						= link_to like_pic_path(@pic),method: :put, class: "btn btn-defaut" do
+							%span.glyphicon.glyphicon-thumbs-up
+							= @pic.get_upvotes.size
+
 						- if user_signed_in?
-							= link_to "Edit", edit_pic_path, class: "btn btn-info"
+							=link_to "Edit", edit_pic_path, class: "btn btn-info"
 							= link_to "Delete", pic_path, method: :delete, data: {confirm: "are u sure?"}, class: "btn btn-danger"
